--- a/.github/workflows/publish-module.yml
+++ b/.github/workflows/publish-module.yml
@@ -2,7 +2,7 @@ name: Publish Module
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   install-and-check:
     name: Install & Check
