--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "serv-term",
   "version": "0.0.0",
-  "description": "Module for gracefully terminating nodejs http server",
+  "description": "Module for gracefully terminating Node.js HTTP servers.",
   "keywords": [],
-  "author": "Lifion.OpenSource@ADP.com",
+  "author": "Mark Crisp <Mark.Crisp@ADP.com>",
   "maintainers": [
-    "Mark Crisp <Mark.Crisp@ADP.com",
-    "Chen Doron <Chen.Doron@ADP.com>",
     "Edgardo Avilés <Edgardo.Aviles@ADP.com>",
     "Jenny Eckstein <Jenny.Eckstein@ADP.com>",
+    "Mark Crisp <Mark.Crisp@ADP.com>",
     "Zaid Masud <Zaid.Masud@ADP.com>"
   ],
   "contributors": [],
@@ -23,21 +22,23 @@
   "homepage": "https://github.com/lifion/serv-term#readme",
   "main": "lib/index.js",
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=10"
   },
   "scripts": {
     "build-docs": "jsdoc2md -t ./templates/README.hbs ./lib/*.js > ./README.md && git add ./README.md",
     "build-docs-watch": "npm-watch build-docs",
     "eslint": "eslint . --ext .js,.json --ignore-pattern='!.*.*'",
-    "format": "prettier --write '**/*.{md,js,json}' '!coverage/**/*.{js,json}'",
+    "format": "prettier --write '**/*.{md,js,json,ts}' '!coverage/**/*.{js,json}'",
     "prepare": "check-engines",
     "test": "jest -c ./.jest.json --detectOpenHandles",
+    "type-check": "tsc --noEmit --project jsconfig.json",
     "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "dependencies": {},
   "devDependencies": {
-    "agentkeepalive": "^4.1.2",
-    "auto-changelog": "^2.0.0",
+    "@types/node": "^14.0.13",
+    "agentkeepalive": "^4.1.3",
+    "auto-changelog": "^2.1.0",
     "axios": "^0.19.2",
     "chalk": "^4.1.0",
     "check-engines": "^1.5.0",
@@ -50,8 +51,9 @@
     "lint-staged": "^10.2.11",
     "npm-watch": "^0.6.0",
     "pem": "^1.14.4",
-    "prettier": "^1.19.1",
-    "semver": "^7.3.2"
+    "prettier": "^2.0.5",
+    "semver": "^7.3.2",
+    "typescript": "^3.9.5"
   },
   "husky": {
     "hooks": {
@@ -68,7 +70,7 @@
   },
   "@lifion/core-commons": {
     "template": "public",
-    "updated": "2019-11-11T21:03:54.741Z",
-    "version": "2.3.4"
+    "updated": "2020-06-18T18:07:19.288Z",
+    "version": "2.4.0"
   }
 }
