--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "build-docs-watch": "npm-watch build-docs",
     "eslint": "eslint . --ext .js,.json --ignore-pattern='!.*.*'",
     "format": "prettier --write '**/*.{md,js,json,ts}' '!coverage/**/*.{js,json}'",
-    "prepare": "check-engines",
+    "prepare": "husky install",
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable",
     "test": "jest -c ./.jest.json --detectOpenHandles",
     "type-check": "tsc --noEmit --project jsconfig.json",
     "version": "auto-changelog -p && git add CHANGELOG.md"
@@ -51,15 +54,10 @@
     "lint-staged": "^10.5.4",
     "npm-watch": "^0.9.0",
     "pem": "^1.14.4",
+    "pinst": "^2.1.6",
     "prettier": "^2.2.1",
     "semver": "^7.3.5",
     "typescript": "^4.2.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run build-docs && lint-staged",
-      "pre-push": "npm run eslint && npm test"
-    }
   },
   "watch": {
     "build-docs": {
